# cardano-tx-decode-ffi

./: .gitignore  .hsbindgen  CHANGELOG.md  Cargo.toml  README.md  cardano-tx-decode-ffi.cabal  cardano_tx_decode.cabal  cardanotxdecode.cabal
app/: Main.hs
manual-test-cbor/: Main.hs
rust/: Cargo.toml  README.md
rust/src/: lib.rs
src/: CardanoTxDecode.hs  Cardanotxdecode.hs  Cbor.hs  lib.rs
