cabal-version:      3.0
name:               cardano-tx-decode-ffi
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Stanislav Zhdanovich
maintainer:         st.zhdanovich@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

-- TODO /home/stan/rust/cardano-tx-decode-ffi rm absolute path
library
    default-language:   Haskell2010
    exposed-modules:
      Cbor
    build-depends:
      base >= 4.9 && < 5,
    hs-source-dirs: src
    extra-libraries:     cardano_tx_decode_lib, pthread
    extra-lib-dirs:      rust/target/release

executable ffi-runner
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.9 && < 5,
        cardano-tx-decode-ffi
    hs-source-dirs:   app
    default-language: Haskell2010
